hphp/hack/test/typecheck/argument_unpacking/unpack_call7.php.exp
File "unpack_call7.php", line 10, characters 23-27:
A function that receives an unpacked array as an argument must have a variadic parameter to accept the elements of the array (Typing[4359])
File "unpack_call7.php", line 4, characters 19-29:
Definition is here
