hphp/hack/test/typecheck/argument_unpacking/unpack_call7.php
<?hh // partial

class C1 {
  public function __construct(private string $foo) {}
}

function test(): void {
  $args = varray[];
  // arity error
  new C1('string', ...$args);
}
